# spymarine-cpp

./: CMakeLists.txt  CMakePresets.json  README.md  raw_device_properties.txt  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  benchmark_message_values_view.cpp  raw_data.hpp
cmake/: clang-toolchain.cmake  gcc-toolchain.cmake  warnings.cmake
examples/: CMakeLists.txt  cumulative_average.cpp  example_utils.hpp  moving_average.cpp  print_devices.cpp  print_devices_and_sensors.cpp  print_home_assistant_discovery.cpp  print_sensor_states.cpp  read_devices.cpp  read_sensor_states.cpp
include/spymarine/: buffer.hpp  byte_operations.hpp  client.hpp  communication.hpp  count_info.hpp  crc.hpp  device.hpp  device2.hpp  device_info.hpp  device_list.hpp  device_ostream.hpp  discover.hpp  error.hpp  file_descriptor.hpp  home_assistant.hpp  home_assistant2.hpp  hub.hpp  id.hpp  message.hpp  message_value.hpp  message_values_iterator.hpp  message_values_view.hpp  overloaded.hpp  parse_count_info.hpp  parse_device.hpp  parse_device2.hpp  parse_device_info.hpp  parse_error.hpp  parse_message.hpp  parse_message_header.hpp  parse_message_type.hpp  parse_sensor2.hpp  parse_system_info.hpp  parsing.hpp  rational.hpp  read_device_infos.hpp  read_devices.hpp  sensor.hpp  sensor2.hpp  sensor_reader.hpp  (+8 more)
src/: CMakeLists.txt  client.cpp  device.cpp  device_ostream.cpp  discover.cpp  error.cpp  file_descriptor.cpp  home_assistant.cpp  hub.cpp  message_value.cpp  message_values_iterator.cpp  parse_device.cpp  parse_message.cpp  parsing.cpp  read_devices.cpp  sensor.cpp  sensor_reader.cpp  tcp_socket.cpp  udp_socket.cpp  value.cpp  value_iterator.cpp  value_view.cpp
test/: CMakeLists.txt  catch_string_maker.hpp  data.hpp  rawData.hpp  raw_data.hpp  test_sockets.hpp  test_tcp_socket.hpp  tst_client.cpp  tst_communication.cpp  tst_device.cpp  tst_home_assistant.cpp  tst_home_assistant2.cpp  tst_hub.cpp  tst_message_value.cpp  tst_message_values_view.cpp  tst_parse_device.cpp  tst_parse_device2.cpp  tst_parse_device_info.cpp  tst_parse_message.cpp  tst_parsing.cpp  tst_read_device_infos.cpp  tst_read_devices.cpp  tst_sensor_reader.cpp
test/raw_data/: count_info.hpp  devices.hpp  info.hpp  sensor_state.hpp  sensors.hpp
